--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-python==3.13.5
-numpy==2.3.1
-matplotlib==3.10.0
-ffmpeg==4.3.1
-cupy==13.4.1
-argparse==1.4.0
-tqdm==4.67.1
-scikit-image==0.25.2
+numpy>=1.22
+matplotlib>=3.5
+cupy>=13.0
+tqdm>=4.60
+scikit-image>=0.19
+flask>=2.0
+pyyaml>=6.0
