fix(gui): ensure simulation generates images and GUI displays results properly

--- a/src/defaults.yaml
+++ b/src/defaults.yaml
@@ -30,4 +30,4 @@ simulation_settings:
   imaginary_time: false
   video: false
   mechanics: false
-  figure: false
+  figure: true  # Enable figure generation by default so results can be displayed
